// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecentsHeader component renders correctly 1`] = `
<div
  className="webex-recents-header recentsHeader md--dark"
>
  <div
    className="webex-recents-header-left headerSideItem"
  >
    <ProfileAvatarMenu
      onProfileClick={[MockFunction]}
      onSignOutClick={[Function]}
    />
  </div>
  <div
    className="webex-search-input-wrapper searchInputWrapper"
  >
    <div
      className="webex-search-input searchInput"
    >
      <SearchInput
        clear={true}
        htmlId="pillSearchInput"
        isLoading={false}
        name="pillSearchInput"
        onChange={[MockFunction]}
        onKeyUp={[MockFunction]}
        type="pill"
      />
    </div>
  </div>
  <div
    className="webex-recents-header-right headerSideItem"
  >
    <ForwardRef(ContextTransform(Button))
      ariaLabel="Contact a person or create a space"
      circle={true}
      color="white"
      onClick={[MockFunction]}
      size={40}
      title="Contact a person or create a space"
    >
      <Icon
        append={false}
        ariaLabel={null}
        buttonClassName=""
        buttonProps={null}
        className=""
        color=""
        description=""
        name="plus_18"
        onClick={null}
        prepend={false}
        size={null}
        sizeOverride={false}
        style={null}
        title=""
        type=""
      />
    </ForwardRef(ContextTransform(Button))>
  </div>
</div>
`;

exports[`RecentsHeader component renders correctly without add button 1`] = `
<div
  className="webex-recents-header recentsHeader md--dark"
>
  <div
    className="webex-recents-header-left headerSideItem"
  >
    <ProfileAvatarMenu
      onProfileClick={[MockFunction]}
      onSignOutClick={[Function]}
    />
  </div>
  <div
    className="webex-search-input-wrapper searchInputWrapper"
  >
    <div
      className="webex-search-input searchInput"
    >
      <SearchInput
        clear={true}
        htmlId="pillSearchInput"
        isLoading={false}
        name="pillSearchInput"
        onChange={[MockFunction]}
        onKeyUp={[MockFunction]}
        type="pill"
      />
    </div>
  </div>
  <div
    className="webex-recents-header-right headerSideItem"
  />
</div>
`;

exports[`RecentsHeader component renders correctly without hiding bottom border 1`] = `
<div
  className="webex-recents-header recentsHeader md--dark bottomBorder"
>
  <div
    className="webex-recents-header-left headerSideItem"
  >
    <ProfileAvatarMenu
      onProfileClick={[MockFunction]}
      onSignOutClick={[Function]}
    />
  </div>
  <div
    className="webex-search-input-wrapper searchInputWrapper"
  >
    <div
      className="webex-search-input searchInput"
    >
      <SearchInput
        clear={true}
        htmlId="pillSearchInput"
        isLoading={false}
        name="pillSearchInput"
        onChange={[MockFunction]}
        onKeyUp={[MockFunction]}
        type="pill"
      />
    </div>
  </div>
  <div
    className="webex-recents-header-right headerSideItem"
  >
    <ForwardRef(ContextTransform(Button))
      ariaLabel="Contact a person or create a space"
      circle={true}
      color="white"
      onClick={[MockFunction]}
      size={40}
      title="Contact a person or create a space"
    >
      <Icon
        append={false}
        ariaLabel={null}
        buttonClassName=""
        buttonProps={null}
        className=""
        color=""
        description=""
        name="plus_18"
        onClick={null}
        prepend={false}
        size={null}
        sizeOverride={false}
        style={null}
        title=""
        type=""
      />
    </ForwardRef(ContextTransform(Button))>
  </div>
</div>
`;

exports[`RecentsHeader component renders correctly without search filter 1`] = `
<div
  className="webex-recents-header recentsHeader md--dark"
>
  <div
    className="webex-recents-header-left headerSideItem"
  >
    <ProfileAvatarMenu
      onProfileClick={[MockFunction]}
      onSignOutClick={[Function]}
    />
  </div>
  <div
    className="webex-search-input-wrapper searchInputWrapper"
  />
  <div
    className="webex-recents-header-right headerSideItem"
  >
    <ForwardRef(ContextTransform(Button))
      ariaLabel="Contact a person or create a space"
      circle={true}
      color="white"
      onClick={[MockFunction]}
      size={40}
      title="Contact a person or create a space"
    >
      <Icon
        append={false}
        ariaLabel={null}
        buttonClassName=""
        buttonProps={null}
        className=""
        color=""
        description=""
        name="plus_18"
        onClick={null}
        prepend={false}
        size={null}
        sizeOverride={false}
        style={null}
        title=""
        type=""
      />
    </ForwardRef(ContextTransform(Button))>
  </div>
</div>
`;

exports[`RecentsHeader component renders correctly without user profile 1`] = `
<div
  className="webex-recents-header recentsHeader md--dark"
>
  <div
    className="webex-recents-header-left headerSideItem"
  />
  <div
    className="webex-search-input-wrapper searchInputWrapper"
  >
    <div
      className="webex-search-input searchInput"
    >
      <SearchInput
        clear={true}
        htmlId="pillSearchInput"
        isLoading={false}
        name="pillSearchInput"
        onChange={[MockFunction]}
        onKeyUp={[MockFunction]}
        type="pill"
      />
    </div>
  </div>
  <div
    className="webex-recents-header-right headerSideItem"
  >
    <ForwardRef(ContextTransform(Button))
      ariaLabel="Contact a person or create a space"
      circle={true}
      color="white"
      onClick={[MockFunction]}
      size={40}
      title="Contact a person or create a space"
    >
      <Icon
        append={false}
        ariaLabel={null}
        buttonClassName=""
        buttonProps={null}
        className=""
        color=""
        description=""
        name="plus_18"
        onClick={null}
        prepend={false}
        size={null}
        sizeOverride={false}
        style={null}
        title=""
        type=""
      />
    </ForwardRef(ContextTransform(Button))>
  </div>
</div>
`;
